Corregido bug de  scroll en el modal cuando esta portrait mode el telefono

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>LearnDesign</title>
     <style type="text/css">
         body {
-            background: #FF1744;
+            background: #FF3D00;
             /*background: #FF3D00;*/
             /*background: #000;*/
         }
@@ -145,10 +145,10 @@
             </div>
             <div class="modal-footer no-line white center">
                 <div class="row">
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-6 col-md-6">
                         <button class="cr simple button green pulse adaptive">CANCEL</button>
                     </div>
-                    <div class="col-xs-12 col-md-6">
+                    <div class="col-xs-6 col-md-6">
                         <button class="cr simple button green pulse adaptive">PUBLISH</button>
                     </div>
                 </div>
