--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>LearnDesign</title>
     <style type="text/css">
         body {
-            background: #FF3D00;
+            background: #00838F;
             /*background: #FF3D00;*/
             /*background: #000;*/
         }
