Fixed some problems related with the loaders

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../Css/main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Grid/flexboxgrid.min.css">
-    <title>LearnDesign</title>
+    <title>Crown</title>
     <style type="text/css">
         body {
             background: #00838F;
@@ -354,8 +354,8 @@
         }
 
         function changePage() {
-            $('body').loader('show', 'dots', {
-                time: '5000',
+            $('body').loader('show', 'default', {
+                time: '55000',
                 background: '#201e55',
                 color: '#cbf17c'
             })
